# swc-import-glob-array-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
src/: imports.rs  lib.rs  transformer.rs  utils.rs
tests/fixtures/basic/: input.js  output.js
