[package]
authors = ["James Coon <james@jcoon.dev> (https://jcoon.dev)"]
description = "SWC plugin that expands glob patterns and imports them as an array"
edition = "2021"
license = "MIT"
name = "swc-import-glob-array-plugin"
publish = false
repository = "https://github.com/jcoon97/swc-import-glob-array-plugin"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
glob = "0.3.1"
is-glob = "0.1.0"
serde = "1"
swc_core = { version = "0.75.*", features = ["ecma_ast", "ecma_visit", "ecma_plugin_transform", "testing"] }
